// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureTooltip default, no close 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem>
      <EuiFlexGroup
        direction="column"
        gutterSize="none"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip default, with close button 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexGroup
      direction="column"
      gutterSize="none"
    >
      <EuiFlexItem
        grow={true}
      >
        <EuiFlexGroup
          alignItems="flexEnd"
          direction="row"
          justifyContent="flexEnd"
        >
          <EuiFlexItem
            grow={false}
          >
            <EuiButtonIcon
              aria-label="Close tooltip"
              color="primary"
              iconSize="m"
              iconType="cross"
              onClick={[Function]}
              type="button"
            />
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiFlexItem>
    </EuiFlexGroup>
    <EuiFlexItem>
      <EuiFlexGroup
        direction="column"
        gutterSize="none"
      />
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip filterable 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem>
      <EuiFlexGroup
        direction="column"
        gutterSize="none"
      >
        <EuiFlexGroup
          key="0"
        >
          <EuiFlexItem
            grow={4}
          >
            <strong>
              foo
            </strong>
          </EuiFlexItem>
          <EuiFlexItem
            grow={6}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </EuiFlexItem>
          <EuiFlexItem
            className="mapFeatureTooltipFilterButton"
            grow={false}
          >
            <EuiButtonIcon
              aria-label="Filter on property"
              className="mapFeatureTooltipFilterButton"
              color="primary"
              iconSize="m"
              iconType="plusInCircle"
              onClick={[Function]}
              title="Filter on property"
              type="button"
            />
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiFlexGroup
          key="1"
        >
          <EuiFlexItem
            grow={4}
          >
            <strong>
              foo
            </strong>
          </EuiFlexItem>
          <EuiFlexItem
            grow={6}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </EuiFlexItem>
          <EuiFlexItem
            className="mapFeatureTooltipFilterButton"
            grow={false}
          />
        </EuiFlexGroup>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;

exports[`FeatureTooltip not filterable 1`] = `
<Fragment>
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <EuiFlexItem>
      <EuiFlexGroup
        direction="column"
        gutterSize="none"
      >
        <EuiFlexGroup
          key="0"
        >
          <EuiFlexItem
            grow={4}
          >
            <strong>
              foo
            </strong>
          </EuiFlexItem>
          <EuiFlexItem
            grow={6}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiFlexGroup
          key="1"
        >
          <EuiFlexItem
            grow={4}
          >
            <strong>
              foo
            </strong>
          </EuiFlexItem>
          <EuiFlexItem
            grow={6}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "bar",
                }
              }
            />
          </EuiFlexItem>
        </EuiFlexGroup>
      </EuiFlexGroup>
    </EuiFlexItem>
  </EuiFlexGroup>
</Fragment>
`;
